<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">购天下</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="pull_to_refresh_update_time">更新于</string>
    <string name="loading_string">正在加载数据,请稍候...</string>
    <string name="loading_error">网络不给力？马上点击重试！</string>
    <string name="loading_nodata">暂无数据！</string>
    <string name="logo_phone">请输入手机号码</string>
    <string name="logo_psw">请输入密码</string>
    <string name="logo_denglu">登录</string>
    <string name="logo_zhuce">免费注册</string>
    <string name="logo_findpsw">找回密码</string>
    <string name="zhuce_text">享受更全面、便捷的服务</string>
    <string name="zhuce_ed_phone">请输入 手机号码</string>
    <string name="zhuce_get_code">获取验证码</string>
    <string name="zhuce_ed_code">请输入验证码</string>
    <string name="zhuce_ed_invitecode">请输入邀请码</string>
    <string name="zhuce_ed_pws">请输入密码</string>
    <string name="zhuce_ed_queren_pws">确认密码</string>
    <string name="zhuce_queding">确定</string>
    <string name="zhuce_check">我已看过并同意时尚购APP</string>
    <string name="zhuce_xieyi">《用户使用协议》</string>
    <string name="findpws_code">发送验证码</string>
    <string name="home">首页</string>
    <string name="home_search">搜索商品</string>
    <string name="home_logo">时尚GO</string>
    <string name="home_fashiongo">FASHION GO</string>
    
</resources>
