<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <include layout="@layout/include_title_text_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" 
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


            <EditText
                android:id="@+id/findpws_edphones"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/qq_edit_login"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/zhuce_ed_phone"
                android:maxLength="11"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:singleLine="true" >
            </EditText>

        

            <TextView
                android:id="@+id/findpws_btn_getcode"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/qq_edit_login"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/findpws_code" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background" >

        <EditText
            android:id="@+id/findpws_edcode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10"
            android:hint="@string/zhuce_ed_code"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background" >

        <EditText
            android:id="@+id/findpws_edpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10"
            android:hint="@string/zhuce_ed_pws"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/zhuce_btnqueren"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/selector_logo"
            android:text="@string/zhuce_queding"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>