<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <include layout="@layout/include_title_text_img" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/qq_edit_login"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/logo_edphone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="请输入手机号码"
            android:paddingLeft="10dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/qq_edit_login"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/logo_edpasswrod"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingLeft="10dp" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/click_login_btn"
        android:text="@string/logo_denglu"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/logo_zhuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/logo_zhuce"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/logo_findpws"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/logo_findpsw"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>